Details
-
Bug
-
Status: Closed (View Workflow)
-
Critical
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL)
-
None
Description
When mysql_upgrade encounters MySQL JSON type, it attempts to load type_mysql_json. In reality it cannot do so, because the plugin is Alpha, and the default allowed plugin maturity level for GA releases is gamma:
|
10.5 5518c320 |
installing plugin for MYSQL_JSON data type
|
ERROR 1126 (HY000) at line 1: Can't open shared library 'type_mysql_json.so' (errno: 1, Loading of alpha plugin MYSQL_JSON is prohibited by --plugin-maturity=gamma)
|
It can be especially problematic for Debian package installation, as it runs mysql_upgrade automatically.
Attachments
Issue Links
- relates to
-
MDEV-26231 mysql_upgrade attempts to remove plugins which it failed to install
-
- In Review
-