MDEV-26230: mysql_upgrade fails to load type_mysql_json due to insufficient maturity level

Fix: Bumped maturity of the mysql_json plugin to gamma.